# finnhub-rs

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  todo.md
.github/workflows/: github-actions.yml
src/: client.rs  lib.rs  types.rs  url_builder.rs  utils.rs
test/: company-news?symbol=GOOGL&from=2020-12-10&to=2021-01-10&token=abc123.expected  company-news?symbol=GOOGL&from=2020-12-10&to=2021-01-10&token=abc123.replay  news-sentiment?symbol=FB&token=abc123.expected  news-sentiment?symbol=FB&token=abc123.replay  news?category=crypto&token=abc123.expected  news?category=crypto&token=abc123.replay  news?category=forex&token=abc123.expected  news?category=forex&token=abc123.replay  news?category=general&token=abc123.expected  news?category=general&token=abc123.replay  news?category=merger&token=abc123.expected  news?category=merger&token=abc123.replay  quote?symbol=TSLA&token=abc123.expected  quote?symbol=TSLA&token=abc123.replay  search?q=AAPL&token=abc123.expected  search?q=AAPL&token=abc123.replay
test/forex/: exchange?token=abc123.expected  exchange?token=abc123.replay  rates?base=USD&token=abc123.expected  rates?base=USD&token=abc123.replay  symbol?exchange=oanda&token=abc123.expected  symbol?exchange=oanda&token=abc123.replay
test/stock/: metric?symbol=NFLX&metric=all&token=abc123.expected  metric?symbol=NFLX&metric=all&token=abc123.replay  peers?symbol=MCD&token=abc123.expected  peers?symbol=MCD&token=abc123.replay  profile2?cusip=023135106&token=abc123.expected  profile2?cusip=023135106&token=abc123.replay  profile2?isin=US5949181045&token=abc123.expected  profile2?isin=US5949181045&token=abc123.replay  profile2?symbol=TSLA&token=abc123.expected  profile2?symbol=TSLA&token=abc123.replay
