[package]
name = "finnhub-rs"
version = "0.1.0"
authors = ["Henry Boisdequin"]
edition = "2018"

[dependencies]
structopt = "0.3.21"
exitfailure = "0.5.1"
reqwest = { version = "0.11.0", features = ["json"] }
serde = "1.0.119"
serde_json = "1.0.61"
serde_derive = "1.0.119"
tokio = { version = "1.0.2", features = ["full"] }
