[package]
name = "finnhub-rs"
version = "0.1.3"
authors = ["Henry Boisdequin"]
license = "MIT"
description = "Finnhub-rs is a client for the Finnhub API implemented in Rust."
homepage = "https://github.com/henryboisdequin/finnhub-rs"
documentation = "https://docs.rs/finnhub-rs/0.1.2/finnhub_rs/"
repository = "https://github.com/henryboisdequin/finnhub-rs"
readme = "README.md"
keywords = ["finnhub", "client", "api", "stocks"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
structopt = "0.3.26"
exitfailure = "0.5.1"
reqwest = { version = "0.11.14", features = ["json"] }
serde = "1.0"
serde_json = "1.0.91"
serde_derive = "1.0"
strum = "0.24"
strum_macros = "0.24"
tokio = { version = "1.24", features = ["full"] }

[dev-dependencies]
reqwest_mock = "0.7.0"
regex = "1"
